<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_bg_color"
    android:orientation="vertical" >
    
    <LinearLayout style="@style/Register_Input" >
        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/book_name"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/book_name"
            style="@style/Register_Edit"
            android:hint="@string/book_input_hint" />
    </LinearLayout>
    <LinearLayout style="@style/Register_Input" >
        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/book_auther"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/book_auther"
            style="@style/Register_Edit"
            android:hint="@string/book_input_hint" />
    </LinearLayout>
    <LinearLayout style="@style/Register_Input" >
        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/book_ISBN"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/book_ISBN"
            style="@style/Register_Edit"
            android:hint="@string/book_input_hint" />
    </LinearLayout>
    <LinearLayout style="@style/Register_Input" >
        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/book_desc"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/book_desc"
            style="@style/Register_Edit"
            android:hint="@string/book_input_hint" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >
        <Button
            android:id="@+id/btn_booksearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
        	android:layout_marginRight="5dp"
        	android:layout_marginTop="5dp"
        	android:layout_marginBottom="5dp"
            android:background="@drawable/btn_login_selector"
            android:gravity="center"
            android:text="@string/book_search"
            android:textColor="@color/base_color_text_white"
            android:textSize="20dp" />
        
        <Button
            android:id="@+id/btn_booksave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
        	android:layout_marginRight="5dp"
        	android:layout_marginTop="5dp"
        	android:layout_marginBottom="5dp"
            android:background="@drawable/btn_login_selector"
            android:gravity="center"
            android:text="@string/book_save"
            android:textColor="@color/base_color_text_white"
            android:textSize="20dp" />
    </LinearLayout>

</LinearLayout>